[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sshcommandstreamer"
version = "1.0.3"
description = "SSH command streamer with real-time output and file upload support"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = ["paramiko"]
